ensure some elements the highest layer order by assigning a very large number to z-index

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -154,6 +154,7 @@ figcaption {
 		top: 0;
 		width: 100%;
 		box-shadow: 0 1px 10px rgba(0, 0, 0, .4);
+		z-index: 1000; /* ensure this layer the highest order */
 	}
 
 	.name {
